<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="tech.scolton.cf_client.activities.CopyrightActivity"
    tools:layout_editor_absoluteY="73dp"
    tools:layout_editor_absoluteX="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="8dp">

        <ImageView
            android:id="@+id/cfLogo"
            android:layout_width="wrap_content"
            android:layout_height="163dp"
            android:src="@drawable/cf"
            android:contentDescription="@string/cf_logo_description"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="1"
            android:layout_margin="8dp">

            <TextView
                android:id="@+id/copyrightNotice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/activity_copyright_notice"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/copyrightStatement"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_copyright_statement"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"
                android:textSize="18sp"/>



            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="bottom"
                    style="?android:attr/buttonBarStyle">

                    <Button
                        android:id="@+id/acceptButton"
                        android:layout_gravity="bottom"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/accept"
                        style="?android:attr/buttonBarButtonStyle"
                        android:onClick="accept" />

                    <Button
                        android:id="@+id/declineButton"
                        android:layout_gravity="bottom"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/decline"
                        style="?android:attr/buttonBarButtonStyle"
                        android:onClick="decline" />
                </LinearLayout>
            </FrameLayout>
        </LinearLayout>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
