<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#EBEBEB">
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_gravity="center"
        android:id="@+id/overview_progress" />
    <android.support.v4.widget.SwipeRefreshLayout
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/overview_swipe_refresh">
        <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical" android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/overview_root">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:orientation="vertical"
                    android:background="@drawable/border_1dip">
                    <LinearLayout
                        android:id="@+id/overview_header"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="10dp"
                        android:background="#9BCA3E">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:textSize="24sp"
                            android:id="@+id/overview_zone_name"
                            android:textColor="#fff" />
                        <FrameLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">
                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:src="@drawable/ic_check_circle_white_24dp"
                                android:layout_gravity="end"
                                android:id="@+id/overview_icon"
                                android:contentDescription="@string/overview_status"/>
                        </FrameLayout>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="10dp"
                        android:background="#fff">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/overview_active_text"
                            android:textSize="28sp"
                            android:layout_marginBottom="3dp"
                            android:id="@+id/overview_status" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/overview_active_desc"
                            android:textSize="18sp"
                            android:id="@+id/overview_status_desc"/>
                    </LinearLayout>
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="10dp"
                        android:orientation="horizontal">
                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/overview_quick_actions"
                            android:visibility="visible"
                            android:layout_centerInParent="true"
                            android:background="@android:drawable/btn_dropdown"
                            android:text="@string/overview_quick_actions"
                            android:textAllCaps="false" />
                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/overview_paused_resume"
                            android:background="#2f7bbf"
                            android:textColor="#fff"
                            android:textAllCaps="false"
                            android:padding="0dp"
                            android:visibility="gone"
                            android:id="@+id/overview_paused_resume"
                            android:layout_centerInParent="true" />
                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/overview_development_mode_disable"
                            android:background="#2f7bbf"
                            android:textColor="#fff"
                            android:textAllCaps="false"
                            android:padding="0dp"
                            android:visibility="gone"
                            android:id="@+id/overview_development_mode_disable"
                            android:layout_centerInParent="true" />
                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/overview_under_attack_mode_disable"
                            android:background="#2f7bbf"
                            android:textColor="#fff"
                            android:textAllCaps="false"
                            android:padding="0dp"
                            android:visibility="gone"
                            android:id="@+id/overview_under_attack_mode_disable"
                            android:layout_centerInParent="true" />
                    </RelativeLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:orientation="vertical"
                    android:background="@drawable/border_1dip">
                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#fff"
                        android:padding="10dp"
                        android:text="@string/overview_domain_overview"
                        android:textSize="28sp" />
                    <TableLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#fff">
                        <TableRow
                            android:layout_marginBottom="0dp">
                            <ImageView
                                android:src="@drawable/ic_lock_outline_black_18dp"
                                android:layout_gravity="end"
                                android:paddingStart="10dp"
                                android:paddingEnd="15dp"
                                android:layout_column="1"
                                android:layout_height="24dp"
                                android:contentDescription="@string/overview_security_content_description" />
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="24dp"
                                android:orientation="horizontal">
                                <TextView
                                    android:id="@+id/security_level"
                                    android:layout_height="wrap_content"
                                    android:text="@string/overview_security_level"
                                    android:textColor="#000"
                                    android:textStyle="bold"
                                    android:layout_gravity="center_vertical"
                                    android:layout_width="wrap_content" />
                                <Button
                                    android:id="@+id/overview_security_level"
                                    style="?android:attr/borderlessButtonStyle"
                                    android:text="@string/security_level_essentially_off"
                                    android:textAllCaps="false"
                                    android:textStyle="normal"
                                    android:padding="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_width="wrap_content"
                                    android:textColor="#2f7bbf"
                                    android:minWidth="0dp" />
                            </LinearLayout>
                        </TableRow>
                        <TableRow
                            android:layout_marginBottom="8dp">
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="24dp"
                                android:orientation="horizontal"
                                android:layout_column="2"
                                tools:ignore="uselessParent">
                                <TextView
                                    android:layout_height="wrap_content"
                                    android:text="@string/overview_ssl"
                                    android:textColor="#000"
                                    android:textStyle="bold"
                                    android:layout_gravity="center_vertical"
                                    android:layout_width="wrap_content" />
                                <Button
                                    android:id="@+id/overview_ssl"
                                    style="?android:attr/borderlessButtonStyle"
                                    android:text="@string/ssl_off"
                                    android:textAllCaps="false"
                                    android:textStyle="normal"
                                    android:padding="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_width="wrap_content"
                                    android:textColor="#2f7bbf"
                                    android:minWidth="0dp" />
                            </LinearLayout>
                        </TableRow>
                        <TableRow>
                            <ImageView
                                android:src="@drawable/ic_computer_black_18dp"
                                android:layout_gravity="end"
                                android:paddingStart="10dp"
                                android:paddingEnd="15dp"
                                android:layout_column="1"
                                android:layout_height="24dp"
                                android:contentDescription="@string/overview_caching_content_description"/>
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="24dp"
                                android:orientation="horizontal">
                                <TextView
                                    android:layout_height="wrap_content"
                                    android:text="@string/overview_caching_level"
                                    android:textColor="#000"
                                    android:textStyle="bold"
                                    android:layout_gravity="center_vertical"
                                    android:layout_width="wrap_content" />
                                <Button
                                    android:id="@+id/overview_cache_level"
                                    style="?android:attr/borderlessButtonStyle"
                                    android:text="@string/cache_level_aggressive"
                                    android:textAllCaps="false"
                                    android:textStyle="normal"
                                    android:padding="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_width="wrap_content"
                                    android:textColor="#2f7bbf"
                                    android:minWidth="0dp"/>
                            </LinearLayout>
                        </TableRow>
                        <TableRow
                            android:layout_marginBottom="8dp">
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="24dp"
                                android:orientation="horizontal"
                                android:layout_column="2"
                                tools:ignore="uselessParent">
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_vertical"
                                    android:text="@string/overview_development_mode"
                                    android:textColor="#000"
                                    android:textStyle="bold" />
                                <Button
                                    android:id="@+id/overview_development_mode"
                                    style="?android:attr/borderlessButtonStyle"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:minWidth="0dp"
                                    android:padding="0dp"
                                    android:text="@string/development_mode_off"
                                    android:textAllCaps="false"
                                    android:textColor="#2f7bbf"
                                    android:textStyle="normal" />
                            </LinearLayout>
                        </TableRow>
                        <TableRow>
                            <ImageView
                                android:src="@drawable/ic_code_black_18dp"
                                android:layout_gravity="end"
                                android:paddingStart="10dp"
                                android:paddingEnd="15dp"
                                android:layout_column="1"
                                android:layout_height="24dp"
                                android:contentDescription="@string/overview_zone_properties_content_description" />
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="24dp"
                                android:orientation="horizontal">
                                <TextView
                                    android:layout_height="wrap_content"
                                    android:text="@string/overview_zone_id"
                                    android:textColor="#000"
                                    android:textStyle="bold"
                                    android:layout_gravity="center_vertical"
                                    android:layout_width="wrap_content" />
                            </LinearLayout>
                        </TableRow>
                        <TableRow
                            android:layout_marginBottom="8dp">
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="24dp"
                                android:orientation="horizontal"
                                tools:ignore="uselessParent"
                                android:layout_column="2">
                                <TextView
                                    android:id="@+id/overview_zone_id"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:inputType="none"
                                    android:padding="0dp" />
                            </LinearLayout>
                        </TableRow>
                        <TableRow>
                            <Button
                                android:layout_column="2"
                                android:text="@string/overview_get_api_key"
                                android:textAllCaps="false"
                                android:textColor="#2f7bbf"
                                android:padding="0dp"
                                android:layout_height="24dp"
                                android:layout_width="wrap_content"
                                android:textAlignment="textStart"
                                android:minWidth="0dp"
                                android:id="@+id/overview_get_api_key"
                                style="?android:attr/borderlessButtonStyle" />
                        </TableRow>
                        <TableRow>
                            <Button
                                android:id="@+id/overview_api_documentation"
                                android:layout_column="2"
                                android:layout_width="wrap_content"
                                android:layout_height="24dp"
                                android:text="@string/overview_api_documentation"
                                android:textAllCaps="false"
                                android:textAlignment="textStart"
                                android:padding="0dp"
                                android:textColor="#2f7bbf"
                                android:minWidth="0dp"
                                style="?android:attr/borderlessButtonStyle" />
                        </TableRow>
                    </TableLayout>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </android.support.v4.widget.SwipeRefreshLayout>
</android.support.design.widget.CoordinatorLayout>
